# stm32f1_blinky

./: .gdbinit  .gitignore  Cargo.toml  build.rs  flash.bat  flash.sh  is_after.dia  readme.md
.cargo/: config
cubemx/: .mxproject  cubemx.ioc
cubemx/Inc/: stm32f1xx_hal_conf.h  usart.h
cubemx/Src/: gpio.c  main.c  systemclock_config.c  usart.c
src/: delay.rs  event.rs  lock.rs  main.rs
